# estrategias_chunking

./: README.md  pyproject.toml
src/estrategias_chunkings/: ChunkHiererchical.py  ChunkRecursiveCharacterTextSplitting.py  ChunkSemantic.py  ChunkSlidingWindowChunking.py  ChunkfixedSize.py
