[project]
name = "estrategias-chunkings"
version = "0.1.0"
description = ""
authors = [
    {name = "airtonlirajr94",email = "airtonlirajr94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain>=0.1.0",
    "langchain-experimental>=0.0.1",
    "langchain-openai (>=0.3.18,<0.4.0)"
]

[tool.poetry]
packages = [{include = "estrategias_chunkings", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
